# ml_recall

./: README.md  loan_recall_prediction_sdlc_handoff.md  pyproject.toml
configs/: base.yaml
docs/: model_artifact_scoring_next_steps.md  powerbi_analytics_guide.md  requirements_priority_guide.md
src/ml_recall/: __init__.py
src/ml_recall/api/: app.py  schemas.py
src/ml_recall/cli/: batch_score.py
src/ml_recall/common/: config.py
src/ml_recall/features/: __init__.py  loan_features.py
src/ml_recall/labels/: horizons.py
src/ml_recall/modeling/: __init__.py  artifacts.py  evaluation.py  training.py
src/ml_recall/quality/: __init__.py  checks.py
src/ml_recall/scoring/: pipeline.py  risk.py
tests/unit/: test_api.py  test_artifacts_and_scoring.py  test_batch_score.py  test_features.py  test_labels.py  test_modeling.py  test_quality.py  test_risk.py
